<resources>
    <string name="appName">Fish Center</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="email">E-mail</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="retypePassword">Re-type Password</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="userDoesNotHaveAnAccount">Don\'t have an account? &lt;b>Register&lt;/b></string>
    <string name="userAlreadyHasAnAccount">Already have an account? &lt;b>Log in&lt;/b></string>
    <string name="userRemembersPassword">Do you remember your password? &lt;b>Log in&lt;/b></string>
    <string name="termsAndConditionsCheckBox">Accept our Terms &amp; Conditions</string>
    <string name="submit">Submit</string>
    <string name="forgotPasswordDescription">Enter your e-mail address below so that we can send you a password reset e-mail.</string>
    <string name="fishIdentification">Fish Identifier</string>
    <string name="map">Map</string>
    <string name="addImage">Add Image</string>
    <string name="identify">Identify</string>
    <string name="enterFishImageDescription">Click here to add your fish image!</string>
    <string name="fishRecognitionActivityDescription">Tap on the image container below to select the fishes you want to identify!</string>
    <string name="fishRecognizedResults">Results</string>
    <string name="invalidRequest">Invalid Request</string>
    <string name="somethingWentWrong">Something went wrong…</string>
    <string name="errorMessage">We were not able to process your request. Check if you have uploaded an fish image.</string>
    <string name="latinName">&lt;b>Latin name:&lt;/b></string>
    <string name="predictionAccuracy">&lt;b>Prediction accuracy:&lt;/b></string>
    <string name="commonNames">&lt;b>Common names:&lt;/b></string>
    <string name="distribution">&lt;b>Distribution:&lt;/b></string>
    <string name="scales">&lt;b>Scales:&lt;/b></string>
    <string name="saltWater">&lt;b>Salt water:&lt;/b></string>
    <string name="freshWater">&lt;b>Fresh water:&lt;/b></string>
    <string name="coloration">&lt;b>Coloration:&lt;/b></string>
    <string name="feedingBehaviour">&lt;b>Feeding behaviour:&lt;/b></string>
    <string name="healthWarnings">&lt;b>Health warnings:&lt;/b></string>
    <string name="foodValue">&lt;b>Food value:&lt;/b></string>
    <string name="similarSpecies">&lt;b>Similar species:&lt;/b></string>
    <string name="environmentalDetails">&lt;b>Environmental details:&lt;/b></string>
    <string name="waitUntilFishRecognised">Hang on while we identify your catch!</string>
    <string name="backToMainMenu">Back to main menu</string>
    <string name="nickname">Nickname</string>
    <string name="tellUsWhatsOnYourMind">What\'s on your mind?</string>
    <string name="createPost">Post Creator</string>
    <string name="title">What\'s your post title?</string>
    <string name="waitForPosts">Hang on while we download your data!</string>
    <string name="noPostsToLoad">There are no posts to display!</string>
    <string name="waitForVideo">Hang on while we load your video!</string>
    <string name="waitForMapSetup">Hang on while we lay out your map!</string>
    <string name="videoPlayer">Video Player</string>
    <string name="button_for_clicking_likes">Button for clicking likes</string>
    <string name="_0">0</string>
    <string name="button_for_clicking_likes2">Button for clicking likes</string>
    <string name="post_thumbnail">post thumbnail</string>
    <string name="user_image">user image</string>
    <string name="post_timestamp">Post timestamp</string>
    <string name="this_is_a_sample_post_body_the_user_content_will_be_placed_here_above_the_post_body_will_be_used_content_in_the_form_of_an_image_gif_or_video_provided_that_the_user_decided_to_upload_such_content">This is a sample post body. The user content will be placed here. Above the post body will be used content in the form of an image, gif or video provided that the user decided to upload such content.</string>
    <string name="post_title">Post title</string>
    <string name="user_nickname">User nickname</string>
    <string name="user_image2">User Image</string>

</resources>