<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/postCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:cardBackgroundColor="@color/graywithopacity45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="9dp">

            <TextView
                android:id="@+id/datePosted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:text="@string/post_timestamp"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/userProfilePicture"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/userProfilePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/user_image2"
                android:maxWidth="128dp"
                android:maxHeight="128dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/userNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/user_nickname"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/datePosted"
                app:layout_constraintTop_toBottomOf="@+id/datePosted" />

            <TextView
                android:id="@+id/postTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_title"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/postBody"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/postBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginStart="9dp"
                android:layout_marginEnd="9dp"
                android:textAlignment="center"
                android:text="@string/this_is_a_sample_post_body_the_user_content_will_be_placed_here_above_the_post_body_will_be_used_content_in_the_form_of_an_image_gif_or_video_provided_that_the_user_decided_to_upload_such_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userProfilePicture"
                tools:ignore="VisualLintLongText">

            </TextView>

            <LinearLayout
                android:id="@+id/mediaLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/postBody">


                <ImageView
                    android:id="@+id/imageAndGifView"
                    android:layout_width="340dp"
                    android:layout_height="340dp"
                    android:layout_marginTop="9dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/user_image"
                    android:maxWidth="340dp"
                    android:maxHeight="340dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

                <ImageView
                    android:id="@+id/postVideoThumbnail"
                    android:layout_width="340dp"
                    android:layout_height="340dp"
                    android:layout_marginTop="9dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/post_thumbnail"
                    android:maxWidth="340dp"
                    android:maxHeight="340dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"></ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/mediaLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/linearLayoutLikesButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded_corners_10_ordinary_button_color"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">

                        <ImageView
                            android:id="@+id/likesButton"
                            android:layout_width="100dp"
                            android:layout_height="48dp"
                            android:background="@drawable/background_rounded_corners_toggle_5_gray_opacity_30_to_transparent"
                            android:contentDescription="@string/button_for_clicking_likes2"
                            app:srcCompat="@drawable/ic_baseline_thumb_up_24_white"
                            tools:ignore="RedundantDescriptionCheck"></ImageView>
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                </View>

                <TextView
                    android:id="@+id/postLikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="15sp"
                    android:layout_gravity="center"
                    app:layout_constraintLeft_toRightOf="@id/likesButton"
                    tools:ignore="HardcodedText">
                </TextView>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                </View>
                <TextView
                    android:id="@+id/postDislikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textSize="15sp"
                    android:layout_gravity="center"
                    app:layout_constraintLeft_toRightOf="@id/likesButton">
                </TextView>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                </View>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/linearLayoutDislikesButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded_corners_10_ordinary_button_color"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">

                        <ImageView
                            android:id="@+id/dislikesButton"
                            android:layout_width="100dp"
                            android:layout_height="48dp"
                            android:background="@drawable/background_rounded_corners_toggle_5_gray_opacity_30_to_transparent"
                            android:contentDescription="@string/button_for_clicking_likes"
                            app:srcCompat="@drawable/ic_baseline_thumb_down_24_white"
                            tools:ignore="RedundantDescriptionCheck"></ImageView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>