<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background6">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/graywithopacity45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">


            <ImageButton
                android:id="@+id/goBackImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="10dp"
                android:contentDescription="user go back to main activity"
                android:background="@drawable/background_rounded_corners_toggle_5_gray_opacity_25_to_transparent"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_arrow_back_24_white"></ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:text="@string/fishRecognition">
            </TextView>


            <ImageButton
                android:id="@+id/logoutImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_rounded_corners_toggle_5_gray_opacity_25_to_transparent"
                android:contentDescription="logs user out"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_logout_24_white"
                tools:ignore="HardcodedText"></ImageButton>



        </androidx.appcompat.widget.Toolbar>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rounded_corners_white_15_opacity_55"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/fishRecognitionActivityDescription"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fishImageLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_corners_white_15_opacity_55"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/fishImageImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="360dp"
                android:maxWidth="360dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:background="@drawable/background_rounded_corners_toggle_5_gray_opacity_50_to_transparent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_empty_image_360_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:background="@color/ordinaryButtonColor"
            android:visibility="visible">

            <Button
                android:id="@+id/identifyFishButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_rounded_corners_toggle_5_gray_opacity_30_to_transparent"
                android:contentDescription="lets the user identify fish"
                android:minHeight="48dp"
                android:text="@string/identify"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressSpinnerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/graywithopacity75"
        android:orientation="vertical"
        android:visibility="invisible"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/waitUntilFishRecognised"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:indeterminate="true"
            android:layout_marginBottom="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>